--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -38,9 +38,8 @@
 
 {% if user.has_role('write_only') %}
     <div class="portal-item">
-        <a class="btn-lg btn-tnth-primary" href="javascript:void()">Report Symptom</a>
-        <a class="btn-lg btn-tnth-primary" href="javascript:void()">Complete Registration</a>
-    </div>         
+        <a class="btn-lg btn-tnth-primary" href="javascript:void()">Registration</a>
+    </div>
 {% endif %}
 
 <div class="img-with-text flush-with-footer full-width">
