add error checking in profile_create.html

--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -83,7 +83,7 @@ $(document).ready(function(){
                         // Both promises resolved
                         //console.log('promises resolved');
                         $('#confirmMsg').fadeIn();
-                        setTimeout($('#confirmMsg').fadeOut(), 2000);
+                        setTimeout('$('#confirmMsg').fadeOut();', 2000);
                         //console.log($('#confirmMsg').length);
                         //$('#createProfileForm')[0].reset();
                         clear();
@@ -93,7 +93,7 @@ $(document).ready(function(){
                         $('#serviceErrorMsg').html('<small>' + error + '</small>').fadeIn();
 
                     });
-                }).catch(function(e) {
+                }).catch(function(error) {
                     //Display Error Here
                     $('#serviceErrorMsg').html('<small>' + error + '</small>').fadeIn();
                 });
@@ -122,6 +122,7 @@ $(document).ready(function(){
 
     };
 
+
     function clear() {
         ['firstname', 'lastname', 'birthday', 'birthdayDay', 'birthdayMonth', 'birthdayYear', 'date', 'year', 'email', 'phone'].forEach(function(fieldName) {
             var currentElement = $('#' + fieldName);
@@ -138,7 +139,7 @@ $(document).ready(function(){
             };
 
             $('#month').find('option').prop('selected', false);
-
+            
         });
 
     };
