--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -38,6 +38,8 @@
 
 {% if user.has_role('write_only') %}
     <div class="portal-item">
+        <h2 class="tnth-subhead">Complete Registration</h2>
+        <p>This will complete your registration for Truenth.</p>
         <a class="btn-lg btn-tnth-primary" href="javascript:void()">Registration</a>
     </div>
 {% endif %}
